Added support for Servlet API 6.0
Fixes issue #292